# RSCoinV2

./: .gitignore  .gitmodules  ARCHITECTURE.md  CMakeLists.txt
config/: node.json  node.poa.json  node.pow.json
config/networks/: mainnet.json  testnet.json
docs/: ARCHITECTURE.md  todo.md
src/: main.cpp
src/chain/: BlockConfig.cpp  BlockConfig.hpp  Blockchain.cpp  ChainConfig.cpp  ChainConfig.hpp  ChainManager.cpp  Factory.cpp  Factory.hpp  Genesis.cpp  Genesis.hpp  GenesisConfig.cpp  GenesisConfig.hpp  IBlockchain.hpp  IChainManager.hpp  IChainView.hpp
src/chain/genesis/: Genesis.cpp
src/chain/kv/: Blockchain.cpp  Blockchain.hpp
src/chain/manager/: ChainManager.cpp  (+1 more)
src/config/: NodeConfig.cpp  NodeConfig.hpp  Section.cpp  Section.hpp  Store.cpp  Store.hpp
src/consensus/: ConsensusConfig.cpp  ConsensusConfig.hpp  Factory.cpp  Factory.hpp  IConsensus.hpp
src/core/: Hex.hpp  Result.hpp  Types.hpp
src/crypto/: CryptoConfig.cpp  CryptoConfig.hpp  CryptoSuite.hpp  Factory.cpp  Factory.hpp  ICrypto.hpp  Sha256.cpp  Suite.cpp  Suite.hpp
src/log/: Logger.cpp  Logger.hpp
src/mempool/: Factory.cpp  Factory.hpp  IMempool.hpp  SimpleMempool.hpp
src/mining/: Factory.cpp  Factory.hpp  IMiner.hpp  Miner.cpp  MiningConfig.cpp  MiningConfig.hpp
src/network/: Factory.cpp  Factory.hpp  INetwork.hpp  NetworkConfig.cpp  NetworkConfig.hpp  Peer.hpp  Socket.cpp  Socket.hpp  TcpNetwork.cpp  Wire.cpp  Wire.hpp
src/node/: Factory.cpp  Factory.hpp  Node.cpp  Node.hpp  NodeModules.hpp
src/primitives/: Block.hpp  Codec.cpp  Codec.hpp  Transaction.hpp
src/protocol/: ChainServices.hpp  Codec.hpp  Dispatcher.hpp  Factory.cpp  Factory.hpp  IProtocol.hpp  Message.hpp  NodeServices.hpp  ProtocolConfig.cpp  ProtocolConfig.hpp
src/rpc/: Api.hpp  Factory.cpp  Factory.hpp  INodeApi.hpp  IRpcServer.hpp  ITransport.hpp  NodeServices.hpp  RpcConfig.cpp  RpcConfig.hpp
src/state/: AccountStateMachine.cpp  AccountStateMachine.hpp  Factory.cpp  Factory.hpp  IStateMachine.hpp  StateConfig.cpp  StateConfig.hpp
src/storage/: Factory.cpp  Factory.hpp  FileStore.hpp  IStorage.hpp  MemoryStore.hpp  StorageConfig.cpp  StorageConfig.hpp
src/utils/: SignalHandler.cpp  SignalHandler.hpp
src/wallet/: Factory.cpp  Factory.hpp  IWallet.hpp  IWalletUi.hpp  WalletConfig.cpp  WalletConfig.hpp
(+55 files in other folders)
